Fixed css alignment

--- a/client/src/styles/stylesUserPassword.css
+++ b/client/src/styles/stylesUserPassword.css
@@ -1,6 +1,18 @@
+.media-container-password {
+  position: relative;
+  left: -20px;
+}
 .container-password {
   display: flex;
   flex-direction: column;
   padding-top: 2rem;
-  max-width:280px;
+  max-width: 280px;
+  margin: 0rem 0 0 0;
+}
+@media screen and (max-width: 1300px) {
+  .media-container-password {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
